--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 body {
-    background-color: lavenderblush;
+    background-color: lavender;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
