--- a/style.css
+++ b/style.css
@@ -2,3 +2,6 @@ body {
     background-color: lavender;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+ .portfolio-p {
+     text-align: center;
+ }
