--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
         background-color : rgb(255, 237, 136);
         color : black;
         text-align : center;
-        margin-top : 30px;
+        margin-top : 100px;
  }
 
  .folioheader {
@@ -61,3 +61,25 @@ body {
  h1 {
      font-weight : bolder;
  }
+
+ .fa {
+    padding: 5px;
+    font-size: 20px;
+    width: 30px;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+
+  .fa:hover {
+    opacity: 0.7;
+  }
+
+  .fa-instagram {
+    background: rgb(154, 205, 214);
+    color: white;
+  }
+  
+  .fa-linkedin {
+    background: rgb(154, 205, 214);
+    color: white;
+  }
