--- a/style.css
+++ b/style.css
@@ -119,4 +119,8 @@ body {
 
 #profileImg {
      float: right;
+     border-radius: 50%;
+     border: solid 5px;
+     border-color: rgb(255, 237, 136);
+     margin: 10px;
   }
