--- a/style.css
+++ b/style.css
@@ -1,126 +1,127 @@
 body {
-    background-color: lavender;
-    font-family: 'Oswald', sans-serif;
+  background-color: lavender;
+  font-family: "Oswald", sans-serif;
 }
- .portfolio-p {
-     text-align: center;
- }
+.portfolio-p {
+  text-align: center;
+}
 
 .btn {
-    background-color : #F5CBC9;
-    border : pink;
-    color : rgb(66, 66, 66);
-    margin-top : 10px;
-    margin-bottom : 10px;
+  background-color: #f5cbc9;
+  border: pink;
+  color: rgb(66, 66, 66);
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .btn:hover {
-    background-color : rgb(250, 143, 161)
+  background-color: rgb(250, 143, 161);
 }
- .card-folio {
-     background-color : rgb(255, 237, 136);
- }
+.card-folio {
+  background-color: rgb(255, 237, 136);
+}
 
- .navbar {
-    background-color : #a6d6e8;
- }
+.navbar {
+  background-color: #a6d6e8;
+}
 
- .container-folio {
-     margin : 20px;
-    padding-bottom: 20px;
+.container-folio {
+  margin: 20px;
+  padding-bottom: 20px;
+}
 
- }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: rgb(255, 237, 136);
+  color: black;
+  text-align: center;
+  margin-top: 100px;
+}
 
- .footer {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width : 100%;
-        height: 40px;
-        background-color : rgb(255, 237, 136);
-        color : black;
-        text-align : center;
-        margin-top : 100px;
- }
+.folioheader {
+  font-weight: bold;
+  text-align: center;
+  color: #473d60;
+}
 
+.card-body {
+  text-align: center;
+}
 
+.card-title {
+  font-weight: bolder;
+}
 
- .folioheader {
-     font-weight : bold;
-     text-align : center;
-     color: #473D60;
- }
+.card-body-index {
+  margin: 10px;
+}
 
- .card-body {
-     text-align : center;
- }
+h1 {
+  font-family: "Grand Hotel", cursive;
+  font-size: 60px;
+  color: #69648c;
+}
 
- .card-title {
-     font-weight : bolder;
- }
+.fa {
+  padding: 5px;
+  font-size: 30px;
+  width: 40px;
+  text-decoration: none;
+  border-radius: 40%;
+}
 
- .card-body-index {
-     margin : 10px;
- }
+.fa:hover {
+  opacity: 0.7;
+}
 
- h1 {
-    font-family: 'Grand Hotel', cursive;
-    font-size: 60px;
-    color : #69648C;
- }
+.fa-instagram {
+  background: #f5cbc9;
+  color: white;
+}
 
- .fa {
-    padding: 5px;
-    font-size: 30px;
-    width: 40px;
-    text-decoration: none;
-    border-radius: 40%;
-  }
+.fa-linkedin {
+  background: #f5cbc9;
+  color: white;
+}
 
-  .fa:hover {
-    opacity: 0.7;
-  }
+.fa-github {
+  background: #f5cbc9;
+  color: white;
+}
 
-  .fa-instagram {
-    background: #F5CBC9;
-    color: white;
-  }
-  
-  .fa-linkedin {
-    background: #F5CBC9;
-    color: white;
-  }
+.nav-link {
+  font-size: 32px;
+  float: right;
+}
 
-  .fa-github{
-    background: #F5CBC9;
-    color: white;
-  }
+.container-intro {
+  padding-bottom: 40px;
+}
 
-  .nav-link {
-      font-size: 32px;
-  }
+.card {
+  border: solid;
+  border-color: rgb(255, 237, 136);
+}
 
-  .container-intro {
-      padding-bottom: 40px;
-  }
+#find-links {
+  padding: 5px;
+}
 
-  .card {
-      border : solid, 5 px;
-      border-color : rgb(255, 237, 136);
-  }
-
-  #find-links {
-      padding : 5px;
-  }
-
-  .jumbotron {
-   background-color: rgba(255,255,255,.70);
-  }
+.jumbotron {
+  background-color: white;
+  border: solid 5px;
+  border-color: rgb(255, 237, 136);
+  margin: 10px;
+}
 
 #profileImg {
-     float: right;
-     border-radius: 50%;
-     border: solid 5px;
-     border-color: rgb(255, 237, 136);
-     margin: 10px;
-  }
+  float: right;
+  border-radius: 50%;
+  border: solid 5px;
+  border-color: #f5cbc9;
+  margin: 10px;
+}
