--- a/style.css
+++ b/style.css
@@ -64,6 +64,12 @@ h1 {
   color: #69648c;
 }
 
+#name {
+  font-family: "Grand Hotel", cursive;
+  font-size: 60px;
+  color: #69648c;
+}
+
 .fa {
   padding: 5px;
   font-size: 30px;
