--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .footer {
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   bottom: 0;
   width: 100%;
@@ -38,6 +38,7 @@ body {
   background-color: rgb(255, 237, 136);
   color: black;
   text-align: center;
+  margin-top: 40px !important;
 }
 
 .folioheader {
@@ -150,4 +151,8 @@ h1 {
 #backgroundCard {
   background-color: rgba(255, 255, 255, 0);
   border: none;
+}
+
+#contactCard{
+  margin-bottom: 40px !important;
 }
