--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -21,41 +21,6 @@ html {
 .btn:hover {
   background-color: rgb(250, 143, 161);
 }
-.card-folio {
-  background-color: rgb(255, 237, 136);
-}
-
-.navbar {
-  background-color: #a6d6e8;
-}
-
-.container-folio {
-  margin-bottom: 20px;
-}
-
-.footer {
-  /* position: fixed; */
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 40px;
-  background-color: rgb(255, 237, 136);
-  color: black;
-  text-align: center;
-  margin-top: 40px !important;
-}
-
-.card-body {
-  text-align: center;
-}
-
-.card-title {
-  font-weight: bolder;
-}
-
-.card-body-index {
-  margin: 10px;
-}
 
 h1 {
   font-family: "Oswald", cursive;
@@ -100,9 +65,9 @@ h1 {
 }
 
 .card {
-  border: solid;
-  border-color: rgb(255, 237, 136);
-  margin: 10px;
+  width: 100%;
+  background-color: transparent;
+  border: solid black;
 }
 
 #find-links {
@@ -190,4 +155,9 @@ h1 {
 
 #skills {
   justify-content: center;
+  border-top: solid black;
+}
+
+#portfolio {
+  border-top: solid black;
 }
