--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,17 +7,17 @@ html {
   scroll-behavior: smooth !important;
 }
 
-.btn {
+/* .btn {
   background-color: #f5cbc9;
   border: pink;
   color: rgb(66, 66, 66);
   margin-top: 10px;
   margin-bottom: 10px;
-}
+} */
 
-.btn:hover {
+/* .btn:hover {
   background-color: rgb(250, 143, 161);
-}
+} */
 
 h1 {
   font-family: "Oswald", cursive;
