fixed carousel so arrows are more noticeable and rounded the photo corners

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -182,3 +182,16 @@ h1 {
   .card-text{
     height: 100px;
   }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    height: 50px;
+    top: 50%;
+    width: 50px;
+    background: rgba(154, 86, 86, 0.55);
+    border-radius: 100px;
+  }
+  
+  .folioPhotos {
+    border-radius: 8px;
+  }
